tests/architecture/fixtures/invalid/layer-boundaries/hook-implementation-selection.ts
import { MockProductsRepository } from "@nexoraxs/sdk/testing";

export const repository = new MockProductsRepository({} as never);
